Fix mobile header image spacing

--- a/components/Header/header.less
+++ b/components/Header/header.less
@@ -1,6 +1,6 @@
 .header {
   position: relative;
-  margin: 0 auto;
+  width: 100%;
 
   .header__img {
     z-index: 1;
@@ -15,7 +15,7 @@
 
     @media @mobile {
       display: block;
-      margin: 0 auto;
+      width: 100%;
     }
   }
 
