--- a/components/Tabs/Tabs.less
+++ b/components/Tabs/Tabs.less
@@ -87,6 +87,7 @@
 
       @media @mobile {
         display: block;
+        width: 100%;
       }
     }
   }
