--- a/css/index.css
+++ b/css/index.css
@@ -331,7 +331,7 @@ a:hover {
 }
 .header {
   position: relative;
-  margin: 0 auto;
+  width: 100%;
 }
 .header .header__img {
   z-index: 1;
@@ -347,7 +347,7 @@ a:hover {
 @media (max-width: 500px) {
   .header .header__img__mobile {
     display: block;
-    margin: 0 auto;
+    width: 100%;
   }
 }
 .header .title {
@@ -649,6 +649,7 @@ footer .copyright {
 @media (max-width: 500px) {
   .services__text__container .services__box .tab__image__mobile {
     display: block;
+    width: 100%;
   }
 }
 .services__text__container .services__box--view {
